# opening-trading-boost

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.codex/: instructions.md
config/: databento_l2.example.toml  databento_l2.legacy_high_pnl.example.toml  databento_l2.legacy_high_pnl.toml  databento_l2.local.toml  final_project_playbook.example.toml  meme_stock_trading_plan.example.toml  model_policy.example.toml  trading_plan.example.toml
data/: final_project_trade_setups.csv  final_project_universe.csv  intents.example.csv  positions.example.csv
docs/: architecture.md  codex_prompt.md  codex_trading_final_project_prompt.md  ibkr_setup.md  l2_results_memo.md  live_switch_checklist.md  trading_final_project.md
final_outputs/: l2_final_project_outputs.ipynb  l2_strategy_version_comparison.csv
notebooks/: trading_final_project_retail_hype.ipynb
research/: apply_l2_setups.py  apply_trade_setups.py  build_features.py  build_l2_features.py  download_databento_l2.py  download_prices.py  export_trade_intents_from_setups.py  make_l2_output_plots.py  simulate_l2_trades.py  stream_ibkr_quotes.py  train_setup_gate.py
scripts/: run_paper.sh  run_tests.sh
src/ibkr_microexec/: __init__.py  audit.py  broker.py  cli.py  config.py  intents.py  l2_features.py  l2_setups.py  l2_simulation.py  models.py  positions.py  risk.py  setups.py  timegate.py
src/ibkr_microexec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_export_trade_intents.py  test_features.py  test_intents.py  test_l2_output_plots.py  test_l2_pipeline.py  test_l2_simulation_cli.py  test_legacy_high_pnl_config.py  test_risk.py  test_setups.py  test_timegate.py
(+7 files in other folders)
