[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opening-trading-boost"
version = "0.1.0"
description = "Offline Databento L2 opening warmup layer for trading research"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Matthew Goodman" }]
dependencies = []

[project.optional-dependencies]
research = ["pandas>=2.2.0", "numpy>=1.26.0", "scikit-learn>=1.4.0", "joblib>=1.3.0", "yfinance>=0.2.40", "matplotlib>=3.8.0"]
dev = ["pytest>=8.0", "ruff>=0.5.0", "pandas>=2.2.0", "numpy>=1.26.0", "matplotlib>=3.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
